deploy: f5e362ce0c3767746139e46136f48c3283946db9

--- a/talks/navigating-change-w-cop-v2/index.html
+++ b/talks/navigating-change-w-cop-v2/index.html
@@ -6,8 +6,8 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>Navigating Change with Communities of Practice (2023 revision) - thoughts</title><meta name="Description" content="thoughts of Carl Chesser"><meta property="og:title" content="Navigating Change with Communities of Practice (2023 revision)" />
-<meta property="og:description" content="Updated: Content updated from 2022 DevOps Enterprise Summit.
-Abstract Change is something we must continually navigate. In a large organization, change can be further challenging based on the number of people that must have a shared understanding in this navigation. This can be complicated with organizational boundaries that can limit consistent communication across large groups, allowing costly variance or great ideas only surfacing within a smaller team or organizational boundary. We must improve how we stay connected, without overloading teams through more channels of communication." />
+<meta property="og:description" content="Newer revision of content from 2022 DevOps Enterprise Summit.
+Abstract Change is something we must continually navigate. In a large organization, change can be further challenging based on the number of people that must have a shared understanding in this navigation. This can be complicated with organizational boundaries that can limit consistent communication across large groups, allowing costly variance or great ideas only surfacing within a smaller team or organizational boundary." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://che55er.io/talks/navigating-change-w-cop-v2/" /><meta property="og:image" content="https://che55er.io/talks/navigating-change-w-cop-v2/navigating-change-w-cop-cover.jpg"/><meta property="article:section" content="talks" />
 
@@ -16,8 +16,8 @@ Abstract Change is something we must continually navigate. In a large organizati
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://che55er.io/talks/navigating-change-w-cop-v2/navigating-change-w-cop-cover.jpg"/>
 <meta name="twitter:title" content="Navigating Change with Communities of Practice (2023 revision)"/>
-<meta name="twitter:description" content="Updated: Content updated from 2022 DevOps Enterprise Summit.
-Abstract Change is something we must continually navigate. In a large organization, change can be further challenging based on the number of people that must have a shared understanding in this navigation. This can be complicated with organizational boundaries that can limit consistent communication across large groups, allowing costly variance or great ideas only surfacing within a smaller team or organizational boundary. We must improve how we stay connected, without overloading teams through more channels of communication."/>
+<meta name="twitter:description" content="Newer revision of content from 2022 DevOps Enterprise Summit.
+Abstract Change is something we must continually navigate. In a large organization, change can be further challenging based on the number of people that must have a shared understanding in this navigation. This can be complicated with organizational boundaries that can limit consistent communication across large groups, allowing costly variance or great ideas only surfacing within a smaller team or organizational boundary."/>
 <meta name="application-name" content="thoughts">
 <meta name="apple-mobile-web-app-title" content="thoughts"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -35,7 +35,7 @@ Abstract Change is something we must continually navigate. In a large organizati
                             "url": "https:\/\/che55er.io\/talks\/navigating-change-w-cop-v2\/navigating-change-w-cop-cover.jpg",
                             "width":  1597 ,
                             "height":  472 
-                        }],"genre": "talks","wordcount":  165 ,
+                        }],"genre": "talks","wordcount":  166 ,
         "url": "https:\/\/che55er.io\/talks\/navigating-change-w-cop-v2\/","publisher": {
             "@type": "Organization",
             "name": "Carl Chesser","logo": "https:\/\/che55er.io\/images\/avatar.png"},"author": {
@@ -129,7 +129,7 @@ Abstract Change is something we must continually navigate. In a large organizati
         data-sizes="auto"
         alt="/talks/navigating-change-w-cop-v2/navigating-change-w-cop.png"
         title="/talks/navigating-change-w-cop-v2/navigating-change-w-cop.png" /></p>
-<p><em><em>Updated</em>: Content updated from <a href="../navigating-change-w-cop" rel="">2022 DevOps Enterprise Summit</a>.</em></p>
+<p><em>Newer revision of content from <a href="../navigating-change-w-cop" rel="">2022 DevOps Enterprise Summit</a>.</em></p>
 <h1 id="abstract">Abstract</h1>
 <p>Change is something we must continually navigate. In a large organization, change can be further challenging based on the number of people that must have a shared understanding in this navigation. This can be complicated with organizational boundaries that can limit consistent communication across large groups, allowing costly variance or great ideas only surfacing within a smaller team or organizational boundary. We must improve how we stay connected, without overloading teams through more channels of communication. There must be a better way.</p>
 <p>Communities of Practice can enable communication across organizational boundaries, creating a support network of knowledge when navigating change, and embraces the influence of Conway’s Law in our systems. In this talk, we will share lessons learned in this approach when applying this in medium to large organization. After this talk, you will have practical ways of improving the communication across your teams, enabling idea sharing, and navigating change with a larger community.</p>
