--- a/talks/diagramming-as-code/index.html
+++ b/talks/diagramming-as-code/index.html
@@ -11,13 +11,12 @@
 <meta property="og:description" content="AbstractIt is easy for documentation with our projects to get stale. This can especially be true with diagrams. This powerful visualization that illustrates our systems, can quickly become misleading when they become out of date. What if we could make it easier to maintain visualizations of our systems, by removing the burden of classical diagramming tools or forcing people into a presentation building tool to illustrate their system?
 Treating our documentation like code can be applied to how we build diagrams, through textual languages that can represent our systems." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://che55er.io/talks/diagramming-as-code/" /><meta property="og:image" content="https://che55er.io/img/avatar-icon.png"/><meta property="article:section" content="talks" />
+<meta property="og:url" content="https://che55er.io/talks/diagramming-as-code/" /><meta property="og:image" content="https://che55er.io/talks/diagramming-as-code/diagramming-as-code.png"/><meta property="article:section" content="talks" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://che55er.io/img/avatar-icon.png"/>
-
+<meta name="twitter:image" content="https://che55er.io/talks/diagramming-as-code/diagramming-as-code.png"/>
 <meta name="twitter:title" content="Diagramming as Code"/>
 <meta name="twitter:description" content="AbstractIt is easy for documentation with our projects to get stale. This can especially be true with diagrams. This powerful visualization that illustrates our systems, can quickly become misleading when they become out of date. What if we could make it easier to maintain visualizations of our systems, by removing the burden of classical diagramming tools or forcing people into a presentation building tool to illustrate their system?
 Treating our documentation like code can be applied to how we build diagrams, through textual languages that can represent our systems."/>
@@ -27,7 +26,7 @@ Treating our documentation like code can be applied to how we build diagrams, th
 
 <meta name="theme-color" content="#f8f8f8"><meta name="msapplication-TileColor" content="#da532c"><meta name="twitter:creator" content="@che55er" /><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="canonical" href="https://che55er.io/talks/diagramming-as-code/" /><link rel="prev" href="https://che55er.io/talks/docs-as-code/" /><link rel="next" href="https://che55er.io/talks/words-matter/" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="canonical" href="https://che55er.io/talks/diagramming-as-code/" /><link rel="next" href="https://che55er.io/talks/navigating-change-w-cop-v2/" />
 <link rel="stylesheet" href="/css/main.css"><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/color.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/lib/fontawesome-free/all.min.css">
         <noscript><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"></noscript><link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/lib/animate/animate.min.css">
         <noscript><link rel="stylesheet" href="/lib/animate/animate.min.css"></noscript><script type="application/ld+json">
@@ -39,7 +38,12 @@ Treating our documentation like code can be applied to how we build diagrams, th
         "mainEntityOfPage": {
             "@type": "WebPage",
             "@id": "https:\/\/che55er.io\/talks\/diagramming-as-code\/"
-        },"image": ["https:\/\/che55er.io\/images\/Apple-Devices-Preview.png"],"genre": "talks","wordcount":  145 ,
+        },"image": [{
+                            "@type": "ImageObject",
+                            "url": "https:\/\/che55er.io\/talks\/diagramming-as-code\/diagramming-as-code.png",
+                            "width":  2126 ,
+                            "height":  1422 
+                        }],"genre": "talks","wordcount":  145 ,
         "url": "https:\/\/che55er.io\/talks\/diagramming-as-code\/","publisher": {
             "@type": "Organization",
             "name": "Carl Chesser","logo": "https:\/\/che55er.io\/images\/avatar.png"},"author": {
